--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,3 +23,24 @@ li{
   align-items: flex-start;
   flex-direction: column;
 }
+
+.textos p {
+  line-height: 1.6;
+}
+
+.titulo_main {
+  line-height: 1.2;
+}
+
+.container_main{
+  height: 550px;
+}
+
+.bg-main{
+  background-color: #290742;
+}
+
+.text_col{
+  color: #290742;
+  font-size: 1.6rem;
+}
